<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".feature.authentication.views.AuthenticationFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:padding="16dp">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/app_logo"
            android:contentDescription="@string/movio_application_logo_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_lets_sign_you_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_s_sign_you_in"
            android:textSize="38sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/app_logo" />

        <!--
            app:iconTint="@null" is necessary, otherwise
            the icon tint will be white
        -->
        <Button
            android:id="@+id/btn_continue_with_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            android:text="@string/btn_facebook_authentication_text"
            app:icon="@drawable/facebook_circular_icon"
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:cornerRadius="@dimen/corner_radius"
            android:backgroundTint="@color/containerColor"
            app:strokeWidth="1dp"
            app:strokeColor="@color/strokeColor"
            android:padding="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_lets_sign_you_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_continue_with_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            android:text="@string/btn_google_authentication_text"
            app:icon="@drawable/google_circular_icon"
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:cornerRadius="@dimen/corner_radius"
            android:backgroundTint="@color/containerColor"
            app:strokeWidth="1dp"
            app:strokeColor="@color/strokeColor"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/btn_continue_with_facebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_continue_with_apple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            android:text="@string/btn_apple_authentication_text"
            app:icon="@drawable/apple_circular_logo"
            app:iconGravity="textStart"
            app:iconTint="@color/white"
            app:cornerRadius="@dimen/corner_radius"
            android:backgroundTint="@color/containerColor"
            app:strokeWidth="1dp"
            app:strokeColor="@color/strokeColor"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/btn_continue_with_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/tv_authentication_divider_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentication_divider_text"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/btn_continue_with_apple"
            app:layout_constraintStart_toStartOf="@id/btn_continue_with_apple"
            app:layout_constraintEnd_toEndOf="@id/btn_continue_with_apple" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:dividerColor="@color/strokeColor"
            app:dividerInsetStart="16dp"
            app:dividerInsetEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_authentication_divider_text"
            app:layout_constraintTop_toTopOf="@id/tv_authentication_divider_text"
            app:layout_constraintBottom_toBottomOf="@id/tv_authentication_divider_text" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:dividerColor="@color/strokeColor"
            app:dividerInsetStart="16dp"
            app:dividerInsetEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_authentication_divider_text"
            app:layout_constraintTop_toTopOf="@id/tv_authentication_divider_text"
            app:layout_constraintBottom_toBottomOf="@id/tv_authentication_divider_text" />


        <Button
            android:id="@+id/btn_sign_in_with_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            android:text="@string/btn_sign_in_with_password_text"
            android:paddingVertical="@dimen/button_padding"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_authentication_divider_text" />


        <TextView
            android:id="@+id/tv_dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_don_t_have_an_account_text"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_signup"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in_with_password" />

        <!--
           Setting the background tint to transparent is necessary
           to remove the ripple color.
        -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/btn_sign_up_text"
            android:paddingVertical="0dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintStart_toEndOf="@id/tv_dont_have_an_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_dont_have_an_account"
            app:layout_constraintBottom_toBottomOf="@id/tv_dont_have_an_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>