<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.account_setup.fill_profile.views.FillYourProfileFragment">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile_picture_placeholder"
            android:background="@color/white"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            app:shapeAppearanceOverlay="@style/circularImageView"
            android:layout_marginTop="42dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/iv_edit_profile_picture"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="Upload a profile picture"
            android:src="@drawable/edit_pen"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="@id/iv_profile_picture"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile_picture" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?attr/textInputFilledStyle"
            app:layout_constraintWidth_max="320dp"
            android:layout_marginTop="42dp"
            android:hint="@string/full_name"
            android:textColorHint="@color/gray"
            app:errorTextColor="@color/warning_yellow"
            app:boxBackgroundColor="@color/containerColor"
            app:boxCornerRadiusTopStart="@dimen/corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
            app:boxStrokeWidth="0dp"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?attr/textInputFilledStyle"
            app:layout_constraintWidth_max="320dp"
            android:layout_marginTop="24dp"
            android:hint="@string/name_tag"
            android:textColorHint="@color/gray"
            app:errorTextColor="@color/warning_yellow"
            app:boxBackgroundColor="@color/containerColor"
            app:boxCornerRadiusTopStart="@dimen/corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
            app:boxStrokeWidth="0dp"
            app:layout_constraintTop_toBottomOf="@id/til_full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_sex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            app:layout_constraintWidth_max="320dp"
            android:layout_marginTop="24dp"
            android:hint="@string/sex"
            android:textColorHint="@color/gray"
            app:endIconTint="@color/white"
            app:boxBackgroundColor="@color/containerColor"
            app:boxCornerRadiusTopStart="@dimen/corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
            app:boxStrokeWidth="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_name_tag">


            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/act_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:dropDownBackgroundTint="@color/containerColor"
                android:textColor="@color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            app:ccp_defaultNameCode="EG"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="false"
            android:background="@drawable/container_shape"
            app:ccp_arrowColor="@color/white"
            app:ccpDialog_showTitle="false"
            app:layout_constraintStart_toStartOf="@id/til_sex"
            app:layout_constraintTop_toTopOf="@id/til_phone_number"
            app:layout_constraintBottom_toBottomOf="@id/til_phone_number" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?attr/textInputFilledStyle"
            app:layout_constraintWidth_max="320dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="4dp"
            android:hint="@string/phone_number"
            android:textColorHint="@color/gray"
            app:errorTextColor="@color/warning_yellow"
            app:boxBackgroundColor="@color/containerColor"
            app:boxCornerRadiusTopStart="@dimen/corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
            app:boxStrokeWidth="0dp"
            app:layout_constraintStart_toEndOf="@id/ccp"
            app:layout_constraintEnd_toEndOf="@id/til_sex"
            app:layout_constraintTop_toBottomOf="@id/til_sex">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:padding="18dp"
            android:layout_marginHorizontal="4dp"
            android:backgroundTint="@color/saturated_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_continue"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_continue"
            android:padding="18dp"
            android:layout_marginHorizontal="4dp"
            app:layout_constraintStart_toEndOf="@id/btn_skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btn_skip" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>